--- a/Game/style3.css
+++ b/Game/style3.css
@@ -1,6 +1,5 @@
-#backs{
-    background-color: rgb(23, 24, 24);
-}
+
+/*background-color: rgb(23, 24, 24);*/
 
 /* Add a black background color to the top navigation */
 .topnav {
