--- a/Game/style3.css
+++ b/Game/style3.css
@@ -1,6 +1,14 @@
 
 /*background-color: rgb(23, 24, 24);*/
 
+#backs {
+  color:black;
+  background-color:white;
+  background-image:url(images/image_de_fond.png);
+  margin:0;
+  }
+
+
 /* Add a black background color to the top navigation */
 .topnav {
     background-color: #acacac;
