--- a/Game/style3.css
+++ b/Game/style3.css
@@ -4,7 +4,7 @@
 #backs {
   color:black;
   background-color:white;
-  background-image:url(images/image_de_fond.png);
+  background-image:url(image/SL-093020-35920-01.jpg);
   margin:0;
   }
 
