--- a/Game/style3.css
+++ b/Game/style3.css
@@ -1,7 +1,7 @@
 
 /*background-color: rgb(23, 24, 24);*/
 
-#backs {
+body {
   color:black;
   background-color:white;
   background-image:url(image/SL-093020-35920-01.jpg);
