--- a/Game/style3.css
+++ b/Game/style3.css
@@ -2,8 +2,8 @@
 /*background-color: rgb(23, 24, 24);*/
 
 body {
-  color:black;
-  background-color:white;
+  color:rgb(255, 255, 255);
+  background-color:rgba(0, 0, 0, 0.573);
   background-image:url(image/SL-093020-35920-01.jpg);
   margin:0;
   }
